多バージョン対応