@@ -1,9 +1,12 @@
 package visibility.command;
 
-import visibility.VisibilityPlugin;
+import visibility.VisibilityPluginBase;
+import visibility.compat.VersionCompat;
 import visibility.i18n.Messages;
 import visibility.i18n.Messages.Lang;
 import visibility.manager.VisibilityManager;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.UUID;
@@ -15,33 +18,40 @@ import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 
 /**
- * Handles commands: /show, /hide, /visibility, /collision
+ * Handles commands: /show, /hide, /visibility.
+ * Version-specific sound playback is delegated to {@link VersionCompat}.
  */
 public class VisibilityCommand implements TabExecutor {
 
-    private final VisibilityPlugin plugin;
+    private final VisibilityPluginBase plugin;
     private final VisibilityManager visibilityManager;
+    private final VersionCompat compat;
 
-    public VisibilityCommand(VisibilityPlugin plugin, VisibilityManager visibilityManager) {
+    public VisibilityCommand(VisibilityPluginBase plugin,
+                             VisibilityManager visibilityManager,
+                             VersionCompat compat) {
         this.plugin = plugin;
         this.visibilityManager = visibilityManager;
+        this.compat = compat;
     }
 
     @Override
     public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
-        if (!(sender instanceof Player player)) {
+        if (!(sender instanceof Player)) {
             sender.sendMessage(ChatColor.RED + "This command can only be used by players.");
             return true;
         }
 
+        Player player = (Player) sender;
         UUID playerId = player.getUniqueId();
         String cmdName = command.getName().toLowerCase(Locale.ROOT);
 
-        switch (cmdName) {
-            case "show" -> handleShow(player, playerId);
-            case "hide" -> handleHide(player, playerId);
-            case "visibility" -> handleVisibilityCommand(player, playerId, label, args);
-            default -> {}
+        if ("show".equals(cmdName)) {
+            handleShow(player, playerId);
+        } else if ("hide".equals(cmdName)) {
+            handleHide(player, playerId);
+        } else if ("visibility".equals(cmdName)) {
+            handleVisibilityCommand(player, playerId, label, args);
         }
         return true;
     }
@@ -58,7 +68,7 @@ public class VisibilityCommand implements TabExecutor {
         boolean changed = visibilityManager.showPlayers(player);
         if (changed) {
             player.sendMessage(ChatColor.GREEN + Messages.playersShown(playerId));
-            player.playSound(player.getLocation(), org.bukkit.Sound.ENTITY_EXPERIENCE_ORB_PICKUP, 0.7f, 1.2f);
+            compat.playShowSound(player);
         } else {
             player.sendMessage(ChatColor.GRAY + Messages.alreadyShown(playerId));
         }
@@ -76,7 +86,7 @@ public class VisibilityCommand implements TabExecutor {
         boolean changed = visibilityManager.hidePlayers(player);
         if (changed) {
             player.sendMessage(ChatColor.GREEN + Messages.playersHidden(playerId));
-            player.playSound(player.getLocation(), org.bukkit.Sound.ENTITY_EXPERIENCE_ORB_PICKUP, 0.7f, 0.6f);
+            compat.playHideSound(player);
         } else {
             player.sendMessage(ChatColor.GRAY + Messages.alreadyHidden(playerId));
         }
@@ -86,7 +96,8 @@ public class VisibilityCommand implements TabExecutor {
     // /visibility <subcommand>
     // -----------------------------------------------------------------------
 
-    private void handleVisibilityCommand(Player player, UUID playerId, String label, String[] args) {
+    private void handleVisibilityCommand(Player player, UUID playerId,
+                                         String label, String[] args) {
         if (args.length == 0) {
             sendUsage(player, playerId, label);
             return;
@@ -94,24 +105,28 @@ public class VisibilityCommand implements TabExecutor {
 
         String sub = args[0].toLowerCase(Locale.ROOT);
 
-        switch (sub) {
-            case "items" -> plugin.giveVisibilityItems(player);
-            case "distance", "dist" -> {
-                if (args.length < 2) {
-                    player.sendMessage(ChatColor.RED + Messages.distanceUsage(playerId, label));
-                    return;
-                }
-                handleDistance(player, playerId, args[1]);
+        if ("items".equals(sub)) {
+            plugin.giveVisibilityItems(player);
+        } else if ("distance".equals(sub) || "dist".equals(sub)) {
+            if (!compat.supportsDistance()) {
+                player.sendMessage(ChatColor.RED + Messages.distanceNotSupported(playerId));
+                return;
             }
-            case "language", "lang" -> {
-                if (args.length < 2) {
-                    player.sendMessage(ChatColor.RED + Messages.cmdUsageLanguage(playerId, label));
-                    return;
-                }
-                handleLanguage(player, playerId, args[1]);
+            if (args.length < 2) {
+                player.sendMessage(ChatColor.RED + Messages.distanceUsage(playerId, label));
+                return;
             }
-            case "help" -> sendHelp(player, playerId, label);
-            default -> sendUsage(player, playerId, label);
+            handleDistance(player, playerId, args[1]);
+        } else if ("language".equals(sub) || "lang".equals(sub)) {
+            if (args.length < 2) {
+                player.sendMessage(ChatColor.RED + Messages.cmdUsageLanguage(playerId, label));
+                return;
+            }
+            handleLanguage(player, playerId, args[1]);
+        } else if ("help".equals(sub)) {
+            sendHelp(player, playerId, label);
+        } else {
+            sendUsage(player, playerId, label);
         }
     }
 
@@ -141,12 +156,11 @@ public class VisibilityCommand implements TabExecutor {
             player.sendMessage(ChatColor.GREEN + Messages.distanceSet(playerId, n));
         }
 
-        // Re-apply visibility if currently hiding
         if (visibilityManager.isHiding(playerId)) {
             visibilityManager.applyVisibility(player);
         }
 
-        player.playSound(player.getLocation(), org.bukkit.Sound.UI_BUTTON_CLICK, 0.6f, 1.0f);
+        compat.playClickSound(player);
     }
 
     private void handleLanguage(Player player, UUID playerId, String langArg) {
@@ -172,7 +186,9 @@ public class VisibilityCommand implements TabExecutor {
         player.sendMessage(ChatColor.DARK_AQUA + "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━");
         player.sendMessage(Messages.helpShow(playerId));
         player.sendMessage(Messages.helpHide(playerId));
-        player.sendMessage(Messages.helpDistance(playerId, label));
+        if (compat.supportsDistance()) {
+            player.sendMessage(Messages.helpDistance(playerId, label));
+        }
         player.sendMessage(Messages.helpItems(playerId, label));
         player.sendMessage(Messages.helpLanguage(playerId, label));
         player.sendMessage(Messages.helpHelp(playerId, label));
@@ -184,20 +200,26 @@ public class VisibilityCommand implements TabExecutor {
     // -----------------------------------------------------------------------
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(CommandSender sender, Command command,
+                                      String alias, String[] args) {
         if (!(sender instanceof Player)) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         String cmdName = command.getName().toLowerCase(Locale.ROOT);
 
-        // /show, /hide, /collision have no sub-args
         if (!"visibility".equals(cmdName)) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         if (args.length == 1) {
-            return List.of("items", "distance", "language", "help").stream()
+            List<String> options;
+            if (compat.supportsDistance()) {
+                options = Arrays.asList("items", "distance", "language", "help");
+            } else {
+                options = Arrays.asList("items", "language", "help");
+            }
+            return options.stream()
                 .filter(opt -> opt.startsWith(args[0].toLowerCase(Locale.ROOT)))
                 .collect(Collectors.toList());
         }
@@ -205,17 +227,17 @@ public class VisibilityCommand implements TabExecutor {
         if (args.length == 2) {
             String sub = args[0].toLowerCase(Locale.ROOT);
             if ("language".equals(sub) || "lang".equals(sub)) {
-                return List.of("ja", "en").stream()
+                return Arrays.asList("ja", "en").stream()
                     .filter(opt -> opt.startsWith(args[1].toLowerCase(Locale.ROOT)))
                     .collect(Collectors.toList());
             }
             if ("distance".equals(sub) || "dist".equals(sub)) {
-                return List.of("0", "5", "10", "20", "50").stream()
+                return Arrays.asList("0", "5", "10", "20", "50").stream()
                     .filter(opt -> opt.startsWith(args[1]))
                     .collect(Collectors.toList());
             }
         }
 
-        return List.of();
+        return Collections.emptyList();
     }
 }
